--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yantrika Learnings</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -12,29 +13,48 @@
 <body>
     <!--topnavbar started -->
     <nav class="navbar navbar-expand-lg  bg-primary fixed-top">
-        <a class="navbar-brand" href="#" >Yantrika Learnings
+        <div class="btn" onclick="opennav()">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+    
+        <a class="navbar-brand" href="#" style="margin:3px;color:rgb(255,255,255)" >
+           Yantrika Learnings
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#mainmenu">
-            MENU<span class="navbar-toggler-icon"></span>
+        <button type="button" class="navbar-toggler menu d-none d-sm-block" data-toggle="collapse" data-target="#mainmenu">
+            MENU<span class="navbar-toggler-icon  icon"></span>
         </button> 
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Signin</a></li>
-                
-                <img src="pic1.jpeg" height="50px" width="50px"  class="image"alt="img">
+                <img src="pic1.jpeg" height="50px" width="50px"  class="image d-none d-sm-block"alt="img">
             </ul>
         </div>      
     </nav>
 <!-- top navbar ended -->
 
-<!-- Side navbar started -->
-    <div class="sidenav">
-      <ul>
-          <li class="nav-item"><a href="#"></a>Settings</li>
-      </ul>
-    </div>
+<!-- side navbar started -->
+<nav class="sidebar">
+    <ul class="sidebaritems">
+        <i class="fa fa-home img" aria-hidden="true"> </i><li><a href="#">Home</a></li>
+        <li><a href="#">Dashboard</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">About</a></li>
+        <li class=""><a href="#">SignOut</a></li>
+    </ul>
+
+</nav>
 <!-- Side navbar ended -->
+
+
+<script>
+  $('.btn').click(function(){
+
+  $(this).toggleClass("click");
+  $('.sidebar').toggleClass("show");
+
+  });
+</script>
 </body>
 </html>
