--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
         <div class="btn" onclick="opennav()">
             <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
-    
-        <a class="navbar-brand" href="#" style="margin:3px;color:rgb(255,255,255)" >
+        <a class="navbar-brand mr-auto" href="#" style="margin:3px;color:rgb(255,255,255)" >
            Yantrika Learnings
         </a>
-        <button type="button" class="navbar-toggler menu d-none d-sm-block" data-toggle="collapse" data-target="#mainmenu">
-            MENU<span class="navbar-toggler-icon  icon"></span>
-        </button> 
+        <!-- <button type="button" class="navbar-toggler menu" data-toggle="collapse" data-target="#mainmenu">
+        </button>  -->
         <div class="collapse navbar-collapse" id="mainmenu">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto hidden-lg-down">
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Signin</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">SignOut</a></li>
                 <img src="pic1.jpeg" height="50px" width="50px"  class="image d-none d-sm-block"alt="img">
             </ul>
         </div>      
@@ -37,11 +35,12 @@
 <!-- side navbar started -->
 <nav class="sidebar">
     <ul class="sidebaritems">
-        <i class="fa fa-home img" aria-hidden="true"> </i><li><a href="#">Home</a></li>
+        <p class="headings">APPLICATIONS</p>
+        <i class="fa fa-home img" aria-hidden="true"></i><li><a href="#">Home</a></li>
         <li><a href="#">Dashboard</a></li>
         <li><a href="#">Settings</a></li>
         <li><a href="#">About</a></li>
-        <li class=""><a href="#">SignOut</a></li>
+        <li class="d-lg-none"><a href="#">SignOut</a></li>
     </ul>
 
 </nav>
