--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
         </button>  -->
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto hidden-lg-down">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">SignOut</a></li>
                 <img src="pic1.jpeg" height="50px" width="50px"  class="image d-none d-sm-block"alt="img">
+                <li class="nav-item"><a class="nav-link" href="#">SignOut</a></li>
             </ul>
         </div>      
     </nav>
@@ -35,12 +33,12 @@
 <!-- side navbar started -->
 <nav class="sidebar">
     <ul class="sidebaritems">
-        <p class="headings">APPLICATIONS</p>
-        <i class="fa fa-home img" aria-hidden="true"></i><li><a href="#">Home</a></li>
-        <li><a href="#">Dashboard</a></li>
-        <li><a href="#">Settings</a></li>
-        <li><a href="#">About</a></li>
-        <li class="d-lg-none"><a href="#">SignOut</a></li>
+        <i class="fa fa-tachometer icon" aria-hidden="true"></i><li><a href="#">Dashboard</a></li>
+        <li><a href="#">Mycourses</a></li>
+        <i class="fa fa-money icon3" aria-hidden="true"></i><li><a href="#">Payment</a></li>
+        <i class="fa fa-cog icon4" aria-hidden="true"></i><li><a href="#">Settings</a></li>
+        <i class="fa fa-users icon5" aria-hidden="true"></i><li><a href="#">Profile</a></li>
+        <li class="d-lg-none" style="position: absolute;top:320px; left:30px;"><a href="#">SignOut</a></li>
     </ul>
 
 </nav>
