--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yantrika Learnings</title>
+    <script src="app.js"></script>
     <!-- Css file -->
     <link rel="stylesheet" href="stylesheet.css">
+    <!--Javascript file  -->
     <!--Font Awesome Links  -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap Links -->
@@ -31,9 +33,22 @@
         <!-- Top menu -->
         <div class="collapse navbar-collapse" id="mainmenu">
             <ul class="navbar-nav ml-auto hidden-lg-down">
-                <li class="nav-item"><a class="nav-link" href=""><i class="material-icons" id="notfication">notifications</i></a></li>
+                <li class="nav-item"><a class="nav-link" href=""><i class="material-icons" id="notfication">notifications</i><span class="badge badge-danger badge-pill">4</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="#" style="color: white;">SignOut</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><img src="pic1.jpeg" height="50px" width="50px"class="image d-none d-sm-block"alt="img"></a></li>
+              
+                <!-- ********DropDown Menu Stated ******* -->
+                &nbsp; &nbsp; &nbsp; &nbsp;
+              <!-- <li class="nav-item dropdown">
+                  <button type="button" class="data-toggle" data-toggle="dropdown">
+                    -->
+                    <img src="img\guy-1.jpg" height="50px" width="50px"class="image d-none d-sm-block"alt="img">
+                    <!-- <div class="dropdown-menu">
+                        <a href="" class="dropdown-item">SignOut</a>
+                    </div>
+                </button>
+              </li> -->
+              <!-- *******DropDown Ended ******-->
+
             </ul>
         </div>      
     </nav>
@@ -79,25 +94,13 @@
 
 </nav>
 <!-- Side navbar ended -->
-
-
 <script>
-    function background(n){
-      var deactive = document.getElementsByClassName("active");
-      if(deactive.length >0)
-      {
-        deactive[0].className = "";
-      }
-      var current = document.getElementById(n)
-      current.className = "active";
-  }
-
   $('.btn').click(function(){
-  $(this).toggleClass("click");
-  $('.sidebar').toggleClass("show");
-  });
+    $(this).toggleClass("click");
+    $('.sidebar').toggleClass("show");
+    });
 
-  
+
 </script>
 </body>
 </html>
