--- a/mycourse.html
+++ b/mycourse.html
@@ -55,7 +55,7 @@
     <!-- Top navbar ended -->
 
 <!-- side navbar started -->
-    <nav class="sidebar">
+    <nav class="sidebar" style=" margin-top: -200px;">
         <ul class="sidebaritems">
             <li>
                 <a href="#" id="demo1" onclick="background('demo1')">
@@ -99,16 +99,18 @@
                 <div class="card">
                     <div class="header text-center">
                         <h3 class="card-title">Python</h3>
-                        <div class="body">
-                            <img class="card-img-bottom" src="img/python.png" alt="Card image" style="width:100%">
-                            <div class="footer">
-                                <small class="text-muted">
-                                Begineer
-                                </small>
-                                <p>Let’s start with a quick tour of Vue’s data binding features. 
-                                    If you are more interested in ...
-                                </p>
+                        <a href="file:///C:/Users/Prasad/Desktop/Nikitha/task%201/card1.html">
+                            <div class="body">
+                                <img class="card-img-bottom" src="img/python.png" alt="Card image" style="width:100%">
                             </div>
+                        </a>
+                        <div class="footer">
+                            <small class="text-muted">
+                            Begineer
+                            </small>
+                            <p>Let’s start with a quick tour of Vue’s data binding features. 
+                                If you are more interested in ...
+                            </p>
                         </div>
                     </div>
                 </div>    
@@ -117,16 +119,18 @@
                 <div class="card">
                     <div class="header text-center">
                         <h3 class="card-title">Python</h3>
-                        <div class="body">
-                            <img class="card-img-bottom" src="img/python.png" alt="Card image" style="width:100%">
-                            <div class="footer">
-                                <small class="text-muted">
-                                Begineer
-                                </small>
-                                <p>Let’s start with a quick tour of Vue’s data binding features. 
-                                    If you are more interested in ...
-                                </p>
+                        <a href="#">
+                            <div class="body">
+                                <img class="card-img-bottom" src="img/python.png" alt="Card image" style="width:100%">
                             </div>
+                        </a>
+                        <div class="footer">
+                            <small class="text-muted">
+                            Begineer
+                            </small>
+                            <p>Let’s start with a quick tour of Vue’s data binding features. 
+                                If you are more interested in ...
+                            </p>
                         </div>
                     </div>
                 </div>
