--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </a>
         </li>
         <li>
-            <a href="file:///C:/Users/Prasad/Desktop/Nikitha/task%201/mycourse.html" id="demo2" onclick="background('demo2')">
+            <a href="mycourse.html" id="demo2" onclick="background('demo2')">
                 <i class="material-icons" id="icon1">school</i>&nbsp;&nbsp;
                  Mycourses
             </a>
