--- a/detail.html
+++ b/detail.html
@@ -11,16 +11,19 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
 </head>
 <body>
-    <div class="container  pt-5 mt-lg-5">
+    <div class="container  pt-5">
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <div>
-                    <h3>Quantum GAN with tensorflow / pytorch+blueqat Anurag Kumar</h3>
+                    <h3>Quantum GAN with tensorflow /Anurag Kumar</h3>
+                    <div>
+                        <h6>Posted by:Anurag Kumar</h6>
+                    </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-8 col-sm-12">
-                 <button class="btn btn-primary">Update</button>
-                 <button class="btn btn-primary">Delete</button>
+                <button class="btn btn-primary">Update</button>
+                <button class="btn btn-primary">Delete</button>
             </div>
         </div>
     </div>
